# luckfox_pico_rkmpi_glibc

./: CMakeLists.txt  build.sh
example/luckfox_pico_rtsp_opencv/src/: main.cc
